# calvr_plugins

./: .gitignore  CAL - Shortcut.lnk  CMakeLists.txt
calit2/: CMakeLists.txt
calit2/.svn/: entries
calit2/AcoustiMaze/: AcoustiMaze.cpp  AcoustiMaze.h  CMakeLists.txt  MXJ_AcoustiMaze.cpp  MazePath.cpp  MazeSquare.cpp  Pose.cpp  Pose.h
calit2/AlgebraInMotion/: AlgebraInMotion.cpp  AlgebraInMotion.h  CMakeLists.txt  CudaHelper.h  CudaParticle.cu  CudaParticle.h  Note.txt  PDObject.cpp  PDObject.h
calit2/AndroidNavigator/: .CMakeLists.txt.swp  AndroidNavigator.cpp  AndroidNavigator.h  AndroidTransform.cpp  AndroidTransform.h  AndroidVisitor.cpp  AndroidVisitor.h  CMakeLists.txt
calit2/AppSwitcher/: ArtifactHack.cpp  ArtifactHack.h  CMakeLists.txt  Plane.cpp  Plane.h  PointCloud.cpp  PointCloud.h  planeIcon.mtl  planesite.cpp  planesite.h
calit2/ArchField/: ArchField.cpp  ArchField.h  CMakeLists.txt  vvtokenizer.h
calit2/ArtifactVis/: AreaMLociDepth.kml  ArtifactVis.cpp  ArtifactVis.h  CMakeLists.txt  DCCategories.txt  mycalvr.xml  vvtokenizer.cpp
calit2/ArtifactVis2/: ArtifactVis2.cpp  ArtifactVis2.h  CMakeLists-forKAUST.txt  CMakeLists.txt  ConvertTools.cpp  ConvertTools.h  LightObject.cpp  LightObject.h  MCylinder.cpp  MCylinder.h  ModelObject.cpp  ModelObject.h  PointCloudObject.cpp  PointCloudObject.h  PubSub.h  classDefault.cpp  classDefault.h  default_ArtifactVis2.xml  skeleton.cpp  skeleton.h  todo  vvtokenizer.cpp  vvtokenizer.h
calit2/BinauralReality/: BinauralReality.cpp  BinauralReality.h  CMakeLists.txt  tnyosc.hpp
calit2/CameraFlight/: .CameraFlight.cpp.swp  .CameraFlight.h.swp  CMakeLists.txt  CameraFlight.cpp  CameraFlight.h  Notes  \  mycalvr.xml
calit2/Catalyst/: CMakeLists.txt  Catalyst.cpp  Catalyst.h  Notes  example.json
calit2/CaveCADBeta/: :wq  AnimationModeler.h  AudioConfigHandler.cpp  AudioConfigHandler.h  CAVEDesigner.cpp  CAVEDesigner.h  CAVEIntersector.cpp  CAVEIntersector.h  CMakeLists.txt  CaveCADBeta.cpp  CaveCADBeta.h  CaveCADBeta.pro  ColorSelector.cpp  ColorSelector.h  DesignObjectHandler.cpp  DesignObjectHandler.h  DesignObjectIntersector.cpp  DesignObjectIntersector.h  DesignStateHandler.cpp  DesignStateHandler.h  DesignStateIntersector.cpp  DesignStateIntersector.h  DesignStateRenderer.cpp  DesignStateRenderer.h  OpenSourceAll.sh  OpenSourceAnimation.sh  OpenSourceDO.sh  OpenSourceDS.sh  OpenSourceGeometry.sh  OpenSourceRoot.sh  OpenSourceTemp.sh  SnapLevelController.cpp  SnapLevelController.h  TrackballController.cpp  TrackballController.h  VirtualScenicHandler.cpp  VirtualScenicHandler.h
calit2/CrashDemo/: AnimationManager.cpp  AnimationManager.h  CMakeLists.txt  CircularStack.cpp  CircularStack.h  CudaCopyCallback.cpp  CudaCopyCallback.h  CudaHelper.cpp  CudaHelper.h  MultiGPUDrawable.cpp  MultiGPUDrawable.h  MultiGPURender.cpp  Timing.cpp  Timing.h
calit2/CudaTest/: CMakeLists.txt  CudaHelper.h  CudaTest.cpp  CudaTest.h  CudaTestDrawable.cpp  CudaTestDrawable.h  GLHelper.cpp  Timing.h
calit2/CullingMultiGPURender/: BufferManager.cpp  BufferManager.h  CMakeLists.txt  CallbackDrawable.cpp  CallbackDrawable.h  ChcAnimate.cpp  ChcAnimate.h  ChcPreDrawCallback.cpp  ChcPreDrawCallback.h  CullingMultiGPURender.cpp  CullingMultiGPURender.h  CustomStatsHandler.cpp  CustomStatsHandler.h  DataTypes.h  Disclaimer1.txt  Disclaimer2.txt  Doxyfile.txt  FetchQueue.cpp  FetchQueue.h  GLHelper.cpp  GLHelper.h  HierarchyNode.h  MathStuff.c  MultiGPURenderer.cpp  MultiGPURenderer.h  PreDrawHook.h  RenderTraverser.cpp  RenderTraverser.h  Timing.cpp  Timing.h
calit2/DumpTracking/: DumpTracking.cpp  DumpTracking.h
calit2/EOGCalibration/: BallHandler.cpp  BallHandler.h  CMakeLists.txt  CaliFieldHandler.cpp  CaliFieldHandler.h  CalibrationController.cpp  CalibrationController.h  EOGCalibration.cpp  EOGCalibration.h  Playback.h
calit2/EZVis/: BoolType.cpp  BoolType.h  CMakeLists.txt  CommandParser.cpp  CommandParser.h  EZVis.cpp  EZVis.h  FloatType.cpp  FloatType.h  Globals.h  MainNode.cpp  MainNode.h  Readme  Router.cpp  Router.h  SocketThread.cpp  StringType.cpp  StringType.h  ThreadMap.cpp  ThreadQueue.cpp  Type.h  Vec3Type.cpp  Vec3Type.h  Vec4Type.cpp  Vec4Type.h
calit2/ElevatorRoom/: AudioHandler.cpp  AudioHandler.h  CMakeLists.txt  ElevatorRoom.cpp  ElevatorRoom.h  ElevatorRoom.xml  Events.txt  ModelHandler.cpp  ModelHandler.h  OSCPack.cpp
calit2/FlowVis/: CMakeLists.txt  CallbackDrawable.cpp  CallbackDrawable.h  CudaHelper.cpp  CudaHelper.h  CudaLIC.cu  CudaLIC.h  CudaVolume.h  DataLoader.h  FlowObject.cpp  FlowObject.h  FlowPagedRenderer.cpp  FlowPagedRenderer.h  FlowVis.cpp  FlowVis.h  GLHelper.cpp  GLHelper.h  LicShaders.h  MemMapDataLoader.cpp  MemMapDataLoader.h  NormalShader.h  PagedFlowObject.cpp  PagedFlowObject.h  PlaneVecShaders.h  VBOCache.cpp  VBOCache.h  VortexCoreShaders.h  pthread_win.cpp  pthread_win.h
calit2/FuturePatient/: CMakeLists.txt  ColorGenerator.cpp  ColorGenerator.h  ComparativeBarChart.cpp  ComparativeBarChart.h  DBManager.cpp  DBManager.h  DataGraph.cpp  DataGraph.h  FPTiledWallSceneObject.cpp  FPTiledWallSceneObject.h  FuturePatient.cpp  FuturePatient.h  GraphGlobals.cpp  GraphGlobals.h  GraphKeyObject.cpp  GraphKeyObject.h  GraphLayoutObject.cpp  GraphLayoutObject.h  GraphObject.cpp  GraphObject.h  GroupedBarGraph.cpp  GroupedBarGraph.h  GroupedBarGraphWPoints.cpp  GroupedBarGraphWPoints.h  GroupedScatterPlot.cpp  GroupedScatterPlot.h  HeatMapGraph.cpp  HeatMapGraph.h  LayoutInterfaces.cpp  LayoutInterfaces.h  LinearRegFunc.cpp  LinearRegFunc.h  MicrobeBarGraphObject.cpp  MicrobeBarGraphObject.h  MicrobeGraphObject.cpp  MicrobeGraphObject.h  MicrobeGraphWAllObject.cpp  MicrobeGraphWAllObject.h  MicrobeLineGraphObject.cpp  (+32 more)
calit2/GML/: GML.cpp  GML.h  Intersection.cpp  Intersection.h  Lerpable.h  TODO  exported.tma
calit2/GlesDrawables/: CMakeLists.txt  drawablesEntrance.cpp  drawablesEntrance.h  pano.cpp  pano.h  planeDrawable.cpp  quadDrawable.cpp  quadDrawable.h  strokeDrawable.cpp  strokeDrawable.h
calit2/GreenLight/: CMakeLists.txt  Entity.cpp  GreenLight.config  GreenLight.cpp  (+11 more)
(+2786 files in other folders)
