SET(LIBRARY_OUTPUT_PATH "${OUTPUT_LIBDIR}/plugins")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${OUTPUT_LIBDIR}/plugins")

INCLUDE_DIRECTORIES(${CalVR_SOURCE_DIR}/plugins/common)

IF(PLUGINS_GENERAL)
    ADD_SUBDIRECTORY(general)
ENDIF(PLUGINS_GENERAL)

IF(PLUGINS_CALIT)
    ADD_SUBDIRECTORY(calit2)
ENDIF(PLUGINS_CALIT)
