cmake_minimum_required(VERSION 2.8)

project (CalVR_Plugins)

SET(CMAKE_MODULE_PATH "${CalVR_Plugins_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}")

OPTION(PLUGINS_GENERAL "Build General Plugins" ON)

INCLUDE(CVRPluginMacros)

FIND_PACKAGE(CalVR)
FIND_PACKAGE(OSG)

SET(LIBRARY_OUTPUT_PATH "${CALVR_DIR}/lib/plugins")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CALVR_DIR}/lib/plugins")

IF(NOT CMAKE_BUILD_TYPE)
    SET (CMAKE_BUILD_TYPE RelWithDebInfo)
ENDIF(NOT CMAKE_BUILD_TYPE)

MARK_AS_ADVANCED(CMAKE_INSTALL_PREFIX)

IF(MSVC)
    ADD_DEFINITIONS("/W3 /D_CRT_SECURE_NO_WARNINGS /wd4018 /wd4251")
ENDIF(MSVC)

INCLUDE_DIRECTORIES(${CALVR_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CalVR_Plugins_SOURCE_DIR}/common)

IF(PLUGINS_GENERAL)
    ADD_SUBDIRECTORY(general)
ENDIF(PLUGINS_GENERAL)

ADD_SUBDIRECTORY(calit2)

SET(ADDITIONAL_PLUGIN_FOLDER "" CACHE STRING "Additional plugin folder to build")

IF(ADDITIONAL_PLUGIN_FOLDER)
    ADD_SUBDIRECTORY(${ADDITIONAL_PLUGIN_FOLDER})
ENDIF(ADDITIONAL_PLUGIN_FOLDER)
