OPTION(PLUGIN_ANDROIDNAVIGATOR "AndroidNavigator Plugin" OFF)
OPTION(PLUGIN_ARTIFACTVIS "ArtifactVis Plugin" OFF)
OPTION(PLUGIN_CUDATEST "CudaTest Plugin" OFF)
OPTION(PLUGIN_CULLINGMGPURENDER "CullingMultiGPURender Plugin" OFF)
OPTION(PLUGIN_DUMPTRACKING "DumpTracking Plugin" OFF)
OPTION(PLUGIN_GML "GML Plugin" OFF)
OPTION(PLUGIN_GREENLIGHT "GreenLight Plugin" OFF)
OPTION(PLUGIN_LIGHTEDITOR "LightEditor Plugin" OFF)
OPTION(PLUGIN_LOCATIONTRACKER "LocationTracker Plugin" OFF)
OPTION(PLUGIN_MODELLOADER "ModelLoader Plugin" OFF)
OPTION(PLUGIN_MULTIGPURENDER "MultiGPURender Plugin" OFF)
OPTION(PLUGIN_MULTIHANDINTERACTION "MultiHandInteraction Plugin" OFF)
OPTION(PLUGIN_MVSIM "MVSim Plugin" OFF)
OPTION(PLUGIN_OSGEARTH "OsgEarth Plugin" OFF)
OPTION(PLUGIN_OSGMOVIE "OsgMovie Plugin" OFF)
OPTION(PLUGIN_OSGPATHRECORDER "OsgPathRecorder Plugin" OFF)
OPTION(PLUGIN_OSSIMPLANET "OssimPlanet Plugin" OFF)
OPTION(PLUGIN_PANOVIEW "PanoView360 Plugin" OFF)
OPTION(PLUGIN_PANOVIEWLOD "PanoViewLOD Plugin" OFF)
OPTION(PLUGIN_PATHRECORDER "PathRecorder Plugin" OFF)
OPTION(PLUGIN_SITE "Site Plugin" OFF)
OPTION(PLUGIN_SKETCH "Sketch Plugin" OFF)
OPTION(PLUGIN_SMV2SETTINGS "SMV2Settings Plugin" OFF)
OPTION(PLUGIN_SPACENAVIGATOR "SpaceNavigator Plugin" OFF)
OPTION(PLUGIN_STRUCTVIEW "StructView Plugin" OFF)
OPTION(PLUGIN_TOURCAVE "TourCave Plugin" OFF)

MARK_AS_ADVANCED(PLUGIN_CUDATEST)
MARK_AS_ADVANCED(PLUGIN_DUMPTRACKING)

IF(PLUGIN_ANDROIDNAVIGATOR)
    ADD_SUBDIRECTORY(AndroidNavigator)
ENDIF(PLUGIN_ANDROIDNAVIGATOR)

IF(PLUGIN_ARTIFACTVIS)
    ADD_SUBDIRECTORY(ArtifactVis)
ENDIF(PLUGIN_ARTIFACTVIS)

IF(PLUGIN_CUDATEST)
    ADD_SUBDIRECTORY(CudaTest)
ENDIF(PLUGIN_CUDATEST)

IF(PLUGIN_CULLINGMGPURENDER)
    ADD_SUBDIRECTORY(CullingMultiGPURender)
ENDIF(PLUGIN_CULLINGMGPURENDER)

IF(PLUGIN_DUMPTRACKING)
    ADD_SUBDIRECTORY(DumpTracking)
ENDIF(PLUGIN_DUMPTRACKING)

IF(PLUGIN_GML)
    ADD_SUBDIRECTORY(GML)
ENDIF(PLUGIN_GML)

IF(PLUGIN_GREENLIGHT)
    ADD_SUBDIRECTORY(GreenLight)
ENDIF(PLUGIN_GREENLIGHT)

IF(PLUGIN_LIGHTEDITOR)
    ADD_SUBDIRECTORY(LightEditor)
ENDIF(PLUGIN_LIGHTEDITOR)

IF(PLUGIN_LOCATIONTRACKER)
    ADD_SUBDIRECTORY(LocationTracker)
ENDIF(PLUGIN_LOCATIONTRACKER)

IF(PLUGIN_MODELLOADER)
    ADD_SUBDIRECTORY(ModelLoader)
ENDIF(PLUGIN_MODELLOADER)

IF(PLUGIN_MULTIGPURENDER)
    ADD_SUBDIRECTORY(MultiGPURender)
ENDIF(PLUGIN_MULTIGPURENDER)

IF(PLUGIN_MULTIHANDINTERACTION)
    ADD_SUBDIRECTORY(MultiHandInteraction)
ENDIF(PLUGIN_MULTIHANDINTERACTION)

IF(PLUGIN_MVSIM)
    ADD_SUBDIRECTORY(MVSim)
ENDIF(PLUGIN_MVSIM)

IF(PLUGIN_OSGEARTH)
    ADD_SUBDIRECTORY(OsgEarth)
ENDIF(PLUGIN_OSGEARTH)

IF(PLUGIN_OSGMOVIE)
    ADD_SUBDIRECTORY(OsgMovie)
ENDIF(PLUGIN_OSGMOVIE)

IF(PLUGIN_OSGPATHRECORDER)
    ADD_SUBDIRECTORY(OsgPathRecorder)
ENDIF(PLUGIN_OSGPATHRECORDER)

IF(PLUGIN_OSSIMPLANET)
    ADD_SUBDIRECTORY(OssimPlanet)
ENDIF(PLUGIN_OSSIMPLANET)

IF(PLUGIN_PANOVIEW)
    ADD_SUBDIRECTORY(PanoView360)
ENDIF(PLUGIN_PANOVIEW)

IF(PLUGIN_PANOVIEWLOD)
    ADD_SUBDIRECTORY(PanoViewLOD)
ENDIF(PLUGIN_PANOVIEWLOD)

IF(PLUGIN_PATHRECORDER)
    ADD_SUBDIRECTORY(PathRecorder)
ENDIF(PLUGIN_PATHRECORDER)

IF(PLUGIN_SITE)
    ADD_SUBDIRECTORY(Site)
ENDIF(PLUGIN_SITE)

IF(PLUGIN_SKETCH)
    ADD_SUBDIRECTORY(Sketch)
ENDIF(PLUGIN_SKETCH)

IF(PLUGIN_SMV2SETTINGS)
    ADD_SUBDIRECTORY(SMV2Settings)
ENDIF(PLUGIN_SMV2SETTINGS)

IF(PLUGIN_SPACENAVIGATOR)
    ADD_SUBDIRECTORY(SpaceNavigator)
ENDIF(PLUGIN_SPACENAVIGATOR)

IF(PLUGIN_STRUCTVIEW)
    ADD_SUBDIRECTORY(StructView)
ENDIF(PLUGIN_STRUCTVIEW)

IF(PLUGIN_TOURCAVE)
    ADD_SUBDIRECTORY(TourCave)
ENDIF(PLUGIN_TOURCAVE)
