OPTION(PLUGIN_ALGEBRAINMOTION "AlgebraInMotion Plugin" OFF)
OPTION(PLUGIN_ANDROIDNAVIGATOR "AndroidNavigator Plugin" OFF)
OPTION(PLUGIN_APPSWITCHER "AppSwitcher Plugin" OFF)
OPTION(PLUGIN_ARCHFIELD "ArchField Plugin" OFF)
OPTION(PLUGIN_ARTIFACTVIS "ArtifactVis Plugin" OFF)
OPTION(PLUGIN_ARTIFACTVIS2 "ArtifactVis2 Plugin" OFF)
OPTION(PLUGIN_BINAURALREALITY "BinauralReality Plugin" OFF)
OPTION(PLUGIN_CAMERAFLIGHT "CameraFlight Plugin" OFF)
OPTION(PLUGIN_CAVECADBETA "CaveCADBeta Plugin" OFF)
OPTION(PLUGIN_CAVESKETCH "CAVESketch Plugin" OFF)
OPTION(PLUGIN_CSEREDESIGN "CSE Redesign Plugin" OFF)
OPTION(PLUGIN_CSELAYERS "CSE Layers Plugin" OFF)
OPTION(PLUGIN_CRASHDEMO "CrashDemo Plugin" OFF)
OPTION(PLUGIN_CUDATEST "CudaTest Plugin" OFF)
OPTION(PLUGIN_CULLINGMGPURENDER "CullingMultiGPURender Plugin" OFF)
OPTION(PLUGIN_DUMPTRACKING "DumpTracking Plugin" OFF)
OPTION(PLUGIN_ELEVATORROOM "ElevatorRoom Plugin" OFF)
OPTION(PLUGIN_EOGCALIBRATION "EOGCalibration Plugin" OFF)
OPTION(PLUGIN_FUTUREPATIENT "FuturePatient Plugin" OFF)
OPTION(PLUGIN_GML "GML Plugin" OFF)
OPTION(PLUGIN_GREENLIGHT "GreenLight Plugin" OFF)
OPTION(PLUGIN_HPWREN "Hpwren Plugin" OFF)
OPTION(PLUGIN_IMAGEVIEWER "ImageViewer Plugin" OFF)
OPTION(PLUGIN_INTERACTORS "Interactors Plugin" OFF)
OPTION(PLUGIN_KINECTHELPER "KinectHelper Plugin" OFF)
OPTION(PLUGIN_LIGHTEDITOR "LightEditor Plugin" OFF)
OPTION(PLUGIN_LOCATIONTRACKER "LocationTracker Plugin" OFF)
OPTION(PLUGIN_MAZE2 "Maze2 Plugin" OFF)
OPTION(PLUGIN_MODELLOADER "ModelLoader Plugin" OFF)
OPTION(PLUGIN_MUGIC "Mugic Plugin" OFF)
OPTION(PLUGIN_MULTIGPURENDER "MultiGPURender Plugin" OFF)
OPTION(PLUGIN_MULTIHANDINTERACTION "MultiHandInteraction Plugin" OFF)
OPTION(PLUGIN_MVSIM "MVSim Plugin" OFF)
OPTION(PLUGIN_OSGCHROMOSOME "OsgChromosome Plugin" OFF)
OPTION(PLUGIN_OSGEARTH "OsgEarth Plugin" OFF)
OPTION(PLUGIN_OSGMOVIE "OsgMovie Plugin" OFF)
OPTION(PLUGIN_OSGPATHRECORDER "OsgPathRecorder Plugin" OFF)
OPTION(PLUGIN_OSGPDF "OsgPdf Plugin" OFF)
OPTION(PLUGIN_OSGVNC "OsgVnc Plugin" OFF)
OPTION(PLUGIN_OSSIMPLANET "OssimPlanet Plugin" OFF)
OPTION(PLUGIN_PANOVIEW "PanoView360 Plugin" OFF)
OPTION(PLUGIN_PANOVIEWLOD "PanoViewLOD Plugin" OFF)
OPTION(PLUGIN_PARTICLEDREAMS "ParticleDreams Plugin" OFF)
OPTION(PLUGIN_PATHRECORDER "PathRecorder Plugin" OFF)
OPTION(PLUGIN_PLUGINTEST "PluginTest Plugin" OFF)
OPTION(PLUGIN_POINTS "Points Plugin" OFF)
OPTION(PLUGIN_POINTSWITHPANS "PointsWithPans Plugin" OFF)
OPTION(PLUGIN_SAMPLEEARTH "SampleEarth Plugin" OFF)
OPTION(PLUGIN_SITE "Site Plugin" OFF)
#OPTION(PLUGIN_SITE2 "Site2 Plugin" OFF)
OPTION(PLUGIN_SKETCH "Sketch Plugin" OFF)
OPTION(PLUGIN_SMV2SETTINGS "SMV2Settings Plugin" OFF)
OPTION(PLUGIN_SPACENAVIGATOR "SpaceNavigator Plugin" OFF)
OPTION(PLUGIN_STRUCTVIEW "StructView Plugin" OFF)
OPTION(PLUGIN_TOUCHDESIGNER "TouchDesigner Plugin" OFF)
OPTION(PLUGIN_TOURCAVE "TourCave Plugin" OFF)
OPTION(PLUGIN_TRACKSERVER "TrackServer Plugin" OFF)
OPTION(PLUGIN_VIDEO "Video" OFF)
OPTION(PLUGIN_VOLUME "Volume Plugin" OFF)
OPTION(PLUGIN_WATERMAZE "WaterMaze Plugin" OFF)

MARK_AS_ADVANCED(PLUGIN_CRASHDEMO)
MARK_AS_ADVANCED(PLUGIN_CUDATEST)
MARK_AS_ADVANCED(PLUGIN_DUMPTRACKING)
MARK_AS_ADVANCED(PLUGIN_PLUGINTEST)

IF(PLUGIN_ALGEBRAINMOTION)
    ADD_SUBDIRECTORY(AlgebraInMotion)
ENDIF(PLUGIN_ALGEBRAINMOTION)

IF(PLUGIN_ANDROIDNAVIGATOR)
    ADD_SUBDIRECTORY(AndroidNavigator)
ENDIF(PLUGIN_ANDROIDNAVIGATOR)

IF(PLUGIN_APPSWITCHER)
    ADD_SUBDIRECTORY(AppSwitcher)
ENDIF(PLUGIN_APPSWITCHER)

IF(PLUGIN_ARCHFIELD)
    ADD_SUBDIRECTORY(ArchField)
ENDIF(PLUGIN_ARCHFIELD)

IF(PLUGIN_ARTIFACTVIS)
    ADD_SUBDIRECTORY(ArtifactVis)
ENDIF(PLUGIN_ARTIFACTVIS)

IF(PLUGIN_ARTIFACTVIS2)
    ADD_SUBDIRECTORY(ArtifactVis2)
ENDIF(PLUGIN_ARTIFACTVIS2)

IF(PLUGIN_BINAURALREALITY)
    ADD_SUBDIRECTORY(BinauralReality)
ENDIF(PLUGIN_BINAURALREALITY)

IF(PLUGIN_CAMERAFLIGHT)
    ADD_SUBDIRECTORY(CameraFlight)
ENDIF(PLUGIN_CAMERAFLIGHT)

IF(PLUGIN_CAVECADBETA)
    ADD_SUBDIRECTORY(CaveCADBeta)
ENDIF(PLUGIN_CAVECADBETA)

IF(PLUGIN_CAVESKETCH)
    ADD_SUBDIRECTORY(CAVESketch)
ENDIF(PLUGIN_CAVESKETCH)

IF(PLUGIN_CSEREDESIGN)
    ADD_SUBDIRECTORY(CSERedesign)
ENDIF(PLUGIN_CSEREDESIGN)

IF(PLUGIN_CSELAYERS)
    ADD_SUBDIRECTORY(CSELayers)
ENDIF(PLUGIN_CSELAYERS)

IF(PLUGIN_CRASHDEMO)
    ADD_SUBDIRECTORY(CrashDemo)
ENDIF(PLUGIN_CRASHDEMO)

IF(PLUGIN_CUDATEST)
    ADD_SUBDIRECTORY(CudaTest)
ENDIF(PLUGIN_CUDATEST)

IF(PLUGIN_CULLINGMGPURENDER)
    ADD_SUBDIRECTORY(CullingMultiGPURender)
ENDIF(PLUGIN_CULLINGMGPURENDER)

IF(PLUGIN_DUMPTRACKING)
    ADD_SUBDIRECTORY(DumpTracking)
ENDIF(PLUGIN_DUMPTRACKING)

IF(PLUGIN_ELEVATORROOM)
    ADD_SUBDIRECTORY(ElevatorRoom)
ENDIF(PLUGIN_ELEVATORROOM)

IF(PLUGIN_EOGCALIBRATION)
    ADD_SUBDIRECTORY(EOGCalibration)
ENDIF(PLUGIN_EOGCALIBRATION)

IF(PLUGIN_FUTUREPATIENT)
    ADD_SUBDIRECTORY(FuturePatient)
ENDIF(PLUGIN_FUTUREPATIENT)

IF(PLUGIN_GML)
    ADD_SUBDIRECTORY(GML)
ENDIF(PLUGIN_GML)

IF(PLUGIN_GREENLIGHT)
    ADD_SUBDIRECTORY(GreenLight)
ENDIF(PLUGIN_GREENLIGHT)

IF(PLUGIN_HPWREN)
    ADD_SUBDIRECTORY(Hpwren)
ENDIF(PLUGIN_HPWREN)

IF(PLUGIN_IMAGEVIEWER)
    ADD_SUBDIRECTORY(ImageViewer)
ENDIF(PLUGIN_IMAGEVIEWER)

IF(PLUGIN_INTERACTORS)
    ADD_SUBDIRECTORY(Interactors)
ENDIF(PLUGIN_INTERACTORS)

IF(PLUGIN_KINECTHELPER)
    ADD_SUBDIRECTORY(KinectHelper)
ENDIF(PLUGIN_KINECTHELPER)

IF(PLUGIN_LIGHTEDITOR)
    ADD_SUBDIRECTORY(LightEditor)
ENDIF(PLUGIN_LIGHTEDITOR)

IF(PLUGIN_LOCATIONTRACKER)
    ADD_SUBDIRECTORY(LocationTracker)
ENDIF(PLUGIN_LOCATIONTRACKER)

IF(PLUGIN_MAZE2)
    ADD_SUBDIRECTORY(Maze2)
ENDIF(PLUGIN_MAZE2)

IF(PLUGIN_MODELLOADER)
    ADD_SUBDIRECTORY(ModelLoader)
ENDIF(PLUGIN_MODELLOADER)

IF(PLUGIN_MUGIC)
    ADD_SUBDIRECTORY(Mugic)
ENDIF(PLUGIN_MUGIC)

IF(PLUGIN_MULTIGPURENDER)
    ADD_SUBDIRECTORY(MultiGPURender)
ENDIF(PLUGIN_MULTIGPURENDER)

IF(PLUGIN_MULTIHANDINTERACTION)
    ADD_SUBDIRECTORY(MultiHandInteraction)
ENDIF(PLUGIN_MULTIHANDINTERACTION)

IF(PLUGIN_MVSIM)
    ADD_SUBDIRECTORY(MVSim)
ENDIF(PLUGIN_MVSIM)

IF(PLUGIN_OSGCHROMOSOME)
    ADD_SUBDIRECTORY(OsgChromosome)
ENDIF(PLUGIN_OSGCHROMOSOME)

IF(PLUGIN_OSGEARTH)
    ADD_SUBDIRECTORY(OsgEarth)
ENDIF(PLUGIN_OSGEARTH)

IF(PLUGIN_OSGMOVIE)
    ADD_SUBDIRECTORY(OsgMovie)
ENDIF(PLUGIN_OSGMOVIE)

IF(PLUGIN_OSGPATHRECORDER)
    ADD_SUBDIRECTORY(OsgPathRecorder)
ENDIF(PLUGIN_OSGPATHRECORDER)

IF(PLUGIN_OSGPDF)
    ADD_SUBDIRECTORY(OsgPdf)
ENDIF(PLUGIN_OSGPDF)

IF(PLUGIN_OSGVNC)
    ADD_SUBDIRECTORY(OsgVnc)
ENDIF(PLUGIN_OSGVNC)

IF(PLUGIN_OSSIMPLANET)
    ADD_SUBDIRECTORY(OssimPlanet)
ENDIF(PLUGIN_OSSIMPLANET)

IF(PLUGIN_PANOVIEW)
    ADD_SUBDIRECTORY(PanoView360)
ENDIF(PLUGIN_PANOVIEW)

IF(PLUGIN_PANOVIEWLOD)
    ADD_SUBDIRECTORY(PanoViewLOD)
ENDIF(PLUGIN_PANOVIEWLOD)

IF(PLUGIN_PARTICLEDREAMS)
    ADD_SUBDIRECTORY(ParticleDreams)
ENDIF(PLUGIN_PARTICLEDREAMS)

IF(PLUGIN_PATHRECORDER)
    ADD_SUBDIRECTORY(PathRecorder)
ENDIF(PLUGIN_PATHRECORDER)

IF(PLUGIN_PLUGINTEST)
    ADD_SUBDIRECTORY(PluginTest)
ENDIF(PLUGIN_PLUGINTEST)

IF(PLUGIN_POINTS)
    ADD_SUBDIRECTORY(Points)
ENDIF(PLUGIN_POINTS)

IF(PLUGIN_POINTSWITHPANS)
    ADD_SUBDIRECTORY(PointsWithPans)
ENDIF(PLUGIN_POINTSWITHPANS)

IF(PLUGIN_SAMPLEEARTH)
    ADD_SUBDIRECTORY(SampleEarth)
ENDIF(PLUGIN_SAMPLEEARTH)

IF(PLUGIN_SITE)
    ADD_SUBDIRECTORY(Site)
ENDIF(PLUGIN_SITE)

#IF(PLUGIN_SITE2)
#    ADD_SUBDIRECTORY(Site2)
#ENDIF(PLUGIN_SITE2)

IF(PLUGIN_SKETCH)
    ADD_SUBDIRECTORY(Sketch)
ENDIF(PLUGIN_SKETCH)

IF(PLUGIN_SMV2SETTINGS)
    ADD_SUBDIRECTORY(SMV2Settings)
ENDIF(PLUGIN_SMV2SETTINGS)

IF(PLUGIN_SPACENAVIGATOR)
    ADD_SUBDIRECTORY(SpaceNavigator)
ENDIF(PLUGIN_SPACENAVIGATOR)

IF(PLUGIN_STRUCTVIEW)
    ADD_SUBDIRECTORY(StructView)
ENDIF(PLUGIN_STRUCTVIEW)

IF(PLUGIN_TOUCHDESIGNER)
    ADD_SUBDIRECTORY(TouchDesigner)
ENDIF(PLUGIN_TOUCHDESIGNER)

IF(PLUGIN_TOURCAVE)
    ADD_SUBDIRECTORY(TourCave)
ENDIF(PLUGIN_TOURCAVE)

IF(PLUGIN_TRACKSERVER)
    ADD_SUBDIRECTORY(TrackServer)
ENDIF(PLUGIN_TRACKSERVER)

IF(PLUGIN_VIDEO)
    ADD_SUBDIRECTORY(Video)
ENDIF(PLUGIN_VIDEO)

IF(PLUGIN_VOLUME)
    ADD_SUBDIRECTORY(Volume)
ENDIF(PLUGIN_VOLUME)

IF(PLUGIN_WATERMAZE)
    ADD_SUBDIRECTORY(WaterMaze)
ENDIF(PLUGIN_WATERMAZE)

