SET(LIB_NAME ArtifactVis)
SET(PLUGIN_HEADERS
    ArtifactVis.h
    vvtokenizer.h)

ADD_LIBRARY(${LIB_NAME}
    "SHARED"
    ${PLUGIN_HEADERS}
    ArtifactVis.cpp
    vvtokenizer.cpp)

FIND_PACKAGE(OSSIMPLANET)
FIND_PACKAGE(OSSIM)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OSSIMPLANET_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OSSIM_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSG_LIBRARIES})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSSIMPLANET_LIBRARY})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSSIM_LIBRARY})


INSTALL(TARGETS ${LIB_NAME} DESTINATION lib/plugins)
