SET(LIB_NAME ArtifactVis)
SET(PLUGIN_HEADERS
    ArtifactVis.h
    vvtokenizer.h)

ADD_LIBRARY(${LIB_NAME}
    "SHARED"
    ${PLUGIN_HEADERS}
    ArtifactVis.cpp
    vvtokenizer.cpp)

FIND_PACKAGE(OSSIMPLANET)
FIND_PACKAGE(OSSIM)

IF(OSSIM_FOUND AND OSSIMPLANET_FOUND)
    ADD_DEFINITIONS(-DWITH_OSSIMPLANET)
    INCLUDE_DIRECTORIES(${OSSIMPLANET_INCLUDE_DIR})
    INCLUDE_DIRECTORIES(${OSSIM_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSSIMPLANET_LIBRARY})
    TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSSIM_LIBRARY})
    TARGET_LINK_LIBRARIES(${LIB_NAME} OssimPlanet)
ENDIF(OSSIM_FOUND AND OSSIMPLANET_FOUND)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSG_LIBRARIES})


INSTALL(TARGETS ${LIB_NAME} DESTINATION lib/plugins)
