SET(LIB_NAME ArtifactVis2)

SET(PLUGIN_HEADERS
    ArtifactVis2.h
    skeleton.h
    MCylinder.h
    ${REMOTEKINECT_INCLUDE_DIR}/protocol/skeletonframe.pb.h
    ${REMOTEKINECT_INCLUDE_DIR}/protocol/skeleton.pb.h
    ${REMOTEKINECT_INCLUDE_DIR}/protocol/colormap.pb.h
    ${REMOTEKINECT_INCLUDE_DIR}/protocol/depthmap.pb.h
    ${REMOTEKINECT_INCLUDE_DIR}/protocol/pointcloud.pb.h
    ${REMOTEKINECT_INCLUDE_DIR}/protocol/packing.pb.h
)

ADD_LIBRARY(${LIB_NAME}
    "SHARED"
    ${PLUGIN_HEADERS}
    ArtifactVis2.cpp
    skeleton.cpp
    MCylinder.cpp
    ${REMOTEKINECT_INCLUDE_DIR}/protocol/skeletonframe.pb.cc
    ${REMOTEKINECT_INCLUDE_DIR}/protocol/skeleton.pb.cc
    ${REMOTEKINECT_INCLUDE_DIR}/protocol/colormap.pb.cc
    ${REMOTEKINECT_INCLUDE_DIR}/protocol/depthmap.pb.cc
    ${REMOTEKINECT_INCLUDE_DIR}/protocol/pointcloud.pb.cc
    ${REMOTEKINECT_INCLUDE_DIR}/protocol/packing.pb.cc
)

#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-cpp")

FIND_PACKAGE(MXML)
FIND_PACKAGE(Spacenav)
FIND_PACKAGE(Snappy)
FIND_PACKAGE(Protobuf)
FIND_PACKAGE(ZMQ)
FIND_PACKAGE(UUID)
FIND_PACKAGE(RemoteKinect)
#FIND_PACKAGE(VRPN)
#FIND_PACKAGE(Omicron)
#FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${MXML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${SPACENAV_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${SNAPPY_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${ZMQ_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${REMOTEKINECT_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CalVR_Plugins_SOURCE_DIR}/calit2/ArtifactVis2/)
#INCLUDE_DIRECTORIES(${UUID_INCLUDE_DIR})
#INCLUDE_DIRECTORIES(${VRPN_INCLUDE_DIR})
#INCLUDE_DIRECTORIES(${OMICRON_INCLUDE_DIR})

TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSG_LIBRARIES})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${MXML_LIBRARY})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${SNAPPY_LIBRARY})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${PROTOBUF_LIBRARY})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${ZMQ_LIBRARY})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${UUID_LIBRARY})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${SPACENAV_LIBRARY})
#TARGET_LINK_LIBRARIES(${LIB_NAME} ${OpenCV_LIBS})

ADD_CALVR_LIBRARIES(${LIB_NAME})

INSTALL(TARGETS ${LIB_NAME} DESTINATION lib/plugins)
