SET(LIB_NAME Catalyst)
SET(PLUGIN_HEADERS
    Catalyst.h
)

ADD_LIBRARY(${LIB_NAME}
    "SHARED"
    ${PLUGIN_HEADERS}
    Catalyst.cpp
)

FIND_PACKAGE(JsonCpp REQUIRED)

INCLUDE_DIRECTORIES(${JsonCpp_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSG_LIBRARIES})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${JsonCpp_LIBRARIES})

ADD_CALVR_LIBRARIES(${LIB_NAME})

INSTALL(TARGETS ${LIB_NAME} DESTINATION lib/plugins)
