SET(LIB_NAME CudaTest)
SET(PLUGIN_HEADERS
    CudaTest.h
    CudaTestDrawable.h
    Timing.h
    CudaHelper.h
    GLHelper.h
)

ADD_LIBRARY(${LIB_NAME}
    "SHARED"
    ${PLUGIN_HEADERS}
    CudaTest.cpp
    CudaTestDrawable.cpp
    Timing.cpp
    CudaHelper.cpp
    GLHelper.cpp
)

FIND_PACKAGE(CUDA)
FIND_PACKAGE(GLEW)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSG_LIBRARIES})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${CUDA_LIBRARIES})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${GLEW_LIBRARY})

INSTALL(TARGETS ${LIB_NAME} DESTINATION lib/plugins)
